Cleanup and code quality